--- a/style/style.css
+++ b/style/style.css
@@ -104,6 +104,30 @@ img:hover {
     justify-content: center;
 
 }
+
+.progress {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 200px;
+    margin: 0 auto;
+    height: 8%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.circle {
+    height: 15px;
+    width: 15px;
+    border: 3px solid black;
+    border-radius: 50%;
+    float: left;
+    margin: auto 10px;
+    background: rgb(53, 91, 94);
+
+}
 .settings {
     font-size: 30px;
     margin: 20px auto 0 auto;
@@ -161,4 +185,13 @@ img:hover {
     height: 95%;
 }
 
+.light {
+    background: #b9e1b9;
+    border: 3px solid black;
+    font-size: 32px;
+}
 
+.dot {
+    background: #b9e1b9;
+    border: 4px solid black;
+}
